objects/Sales_Area_Master__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Description__c</fullName>
        <label>Channel Description</label>
        <picklist>
            <picklistValues>
                <fullName>0: Common Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1: AG Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7: MX Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8: PLIC Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10: CNRC Distrb. Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11: DIR Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18: CNCD Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19: CNCC Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20: CNWV Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23: DKAP Thermostatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24: DKAP Surface:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25: DKAP Presswork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26: DKAP Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27: PLCD Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31: DESC Refrigeration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32: DESC Burners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33: DESC Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34: DESC Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35: DESC NESSIE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36: DESC Analytical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46: KZSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53: CNIC Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54: CNDH Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57: PLRC (D. Saginomiya)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60: RUCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64: CNCCS Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65: PLRC Producer Branch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Description__c</fullName>
        <label>Division Description</label>
        <picklist>
            <picklistValues>
                <fullName>0: Common Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1: AC-R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Burner Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Comfort Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: AG-Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5: AC-O Staff Organizat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6: RADEHC PL06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7: MXRCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8: DEC Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9: PL09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10: CNRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11: DIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12: MCFD PL12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14: High Pressure Pumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16: PL16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17: RAFRCC PL17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18: Gearmotors PL 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19: CNCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20: CNWV - DKFH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21: DKFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22: Heat Pumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23: DKAP Thermostatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24: DKAP Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25: DKAP Presswork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26: Solar Inverters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27: PLCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28: Hydronic Balancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29: PL29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30: PLHP (Thermia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31: DEH Heat Exchangers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sales Area ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <formula>Sales_Org__c + &quot;-&quot; +  Channel__c + &quot;-&quot; +  Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Description__c</fullName>
        <label>Sales Org Description</label>
        <picklist>
            <picklistValues>
                <fullName>1: DKRC/IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: MCFDGBO Sales Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5: MCFDDK Sales Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6: MCFDGBS Sales Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11: DIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13: RAV-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41: RA Sales &amp; Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55: DKAP Thermostats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56: DKAP Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57: Pressworks A/S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>58: DKAP Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101: MX Sales Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>102: PLIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>103: USRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>104: CNRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105: DEIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>107: Not used now 0101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>109: PLCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110: CNCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111: CNCC (Next Gen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>112: CNWV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>113: CNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114: HKSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116: CNDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>117: CNSCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>118: CNSCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>119: CNIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>144: RUSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>146: KZSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150: CNCCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
</CustomObject>